feat: Actualicé navegación del footer

--- a/index.html
+++ b/index.html
@@ -363,14 +363,17 @@
                         <a class ="nav-item active" href="#">Inicio</a>
                     </li>
                     <li>
-                        <a href="#" class ="nav-item seccion1-link">Sección 1</a>
+                        <a href="#" class ="nav-item seccion1-link">Características</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-item seccion2-link">Sección 2</a>
+                        <a href="#" class="nav-item seccion2-link">Nuestra App</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-item seccion3-link">Sección 3</a>
+                        <a href="#" class="nav-item seccion3-link">Testimonios</a>
                     </li>
+                    <li>
+                    <a href="#" class="nav-item seccion4-link">Contáctanos</a>
+                </li>
                 </ul>
             </div>
             <div class="footer-payment">
